// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Community Participant renders the bar-plot component 1`] = `
"<div class=\\"container container--fluid\\">
  <div>
    <h1 class=\\"text-h4\\">

    </h1>
    <h2 class=\\"text-subtitle-1 mb-5\\">

    </h2>
    <p class=\\"text--secondary\\">
      In this 2D plot two metrics from the challenge
      are represented in the X and Y axis, showing the
      results from the participating tools in this challenge. The gray line
      represents the pareto frontier, which runs over the participants showing
      the best efficiency and the arrow in the plot represents the optimal
      corner.
    </p>
    <div role=\\"alert\\" class=\\"v-alert mt-8 v-sheet theme--dark v-alert--border v-alert--dense v-alert--text v-alert--border-left info--text\\">
      <div class=\\"v-alert__wrapper\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate v-alert__icon mdi mdi-information theme--dark info--text\\"></i>
        <div class=\\"v-alert__content\\">
          The menu button above the diagram can be used to switch between the
          different classification methods / visualization modes (Square
          Quartiles; Diagonal Quartiles, and k-means Clustering).
        </div>
        <div class=\\"v-alert__border v-alert__border--left\\"></div>
      </div>
    </div>
  </div>
  <div>
    <!---->
    <div class=\\"mt-2 v-item-group theme--light v-slide-group v-chip-group v-chip-group--column\\">
      <div class=\\"v-slide-group__prev v-slide-group__prev--disabled\\">
        <transition-stub name=\\"fade-transition\\"></transition-stub>
      </div>
      <div class=\\"v-slide-group__wrapper\\">
        <div class=\\"v-slide-group__content\\"><span tabindex=\\"0\\" class=\\"v-chip primary--text v-chip--active v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Weighted Probabilistic Concordance Index (WPC-i)
			</span></span></div>
      </div>
      <div class=\\"v-slide-group__next v-slide-group__next--disabled\\">
        <transition-stub name=\\"fade-transition\\"></transition-stub>
      </div>
    </div>
    <div class=\\"v-window v-item-group theme--light v-tabs-items\\">
      <div class=\\"v-window__container\\">
        <transition-stub name=\\"\\">
          <div class=\\"v-window-item v-window-item--active\\">
            <div data-id=\\"OEBD003000002S\\" data-api-url=\\"undefined/graphql\\" class=\\"benchmarkingChart_bars mt-5\\"></div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Community Participant renders the scatter-plot component 1`] = `
"<div class=\\"container container--fluid\\">
  <div>
    <h1 class=\\"text-h4\\">

    </h1>
    <h2 class=\\"text-subtitle-1 mb-5\\">

    </h2>
    <p class=\\"text--secondary\\">
      In this 2D plot two metrics from the challenge
      are represented in the X and Y axis, showing the
      results from the participating tools in this challenge. The gray line
      represents the pareto frontier, which runs over the participants showing
      the best efficiency and the arrow in the plot represents the optimal
      corner.
    </p>
    <div role=\\"alert\\" class=\\"v-alert mt-8 v-sheet theme--dark v-alert--border v-alert--dense v-alert--text v-alert--border-left info--text\\">
      <div class=\\"v-alert__wrapper\\"><i aria-hidden=\\"true\\" class=\\"v-icon notranslate v-alert__icon mdi mdi-information theme--dark info--text\\"></i>
        <div class=\\"v-alert__content\\">
          The menu button above the diagram can be used to switch between the
          different classification methods / visualization modes (Square
          Quartiles; Diagonal Quartiles, and k-means Clustering).
        </div>
        <div class=\\"v-alert__border v-alert__border--left\\"></div>
      </div>
    </div>
  </div>
  <div>
    <h2 class=\\"text-h6 mt-10\\">Choose dataset:</h2>
    <div class=\\"mt-2 v-item-group theme--light v-slide-group v-chip-group v-chip-group--column\\">
      <div class=\\"v-slide-group__prev v-slide-group__prev--disabled\\">
        <transition-stub name=\\"fade-transition\\"></transition-stub>
      </div>
      <div class=\\"v-slide-group__wrapper\\">
        <div class=\\"v-slide-group__content\\"><span tabindex=\\"0\\" class=\\"v-chip primary--text v-chip--active v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average CAD-score
			</span></span><span tabindex=\\"0\\" class=\\"v-chip v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average lDDT
			</span></span><span tabindex=\\"0\\" class=\\"v-chip v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average QS-score
			</span></span><span tabindex=\\"0\\" class=\\"v-chip v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average MM-align TM-score
			</span></span><span tabindex=\\"0\\" class=\\"v-chip v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average lDDT-BS
			</span></span><span tabindex=\\"0\\" class=\\"v-chip v-chip--clickable v-chip--no-color theme--light v-size--default\\"><span class=\\"v-chip__content\\">
				Fraction returned + Average Model confidence
			</span></span></div>
      </div>
      <div class=\\"v-slide-group__next v-slide-group__next--disabled\\">
        <transition-stub name=\\"fade-transition\\"></transition-stub>
      </div>
    </div>
    <div class=\\"v-window v-item-group theme--light v-tabs-items\\">
      <div class=\\"v-window__container\\">
        <transition-stub name=\\"\\">
          <div class=\\"v-window-item v-window-item--active\\">
            <div data-id=\\"OEBD0080000U6A\\" data-api-url=\\"undefined/graphql\\" totable=\\"true\\" data-mode=\\"openebench\\" class=\\"benchmarkingChart_scatter mt-5\\"></div>
          </div>
        </transition-stub>
        <transition-stub name=\\"\\">
          <!---->
        </transition-stub>
        <transition-stub name=\\"\\">
          <!---->
        </transition-stub>
        <transition-stub name=\\"\\">
          <!---->
        </transition-stub>
        <transition-stub name=\\"\\">
          <!---->
        </transition-stub>
        <transition-stub name=\\"\\">
          <!---->
        </transition-stub>
      </div>
    </div>
  </div>
</div>"
`;
